扶養人数を更新する機能の作成.EmployeeServiceのメソッドの追家

--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -175,7 +175,7 @@
 							</table>
 							<button type="submit" class="btn btn-primary">更新</button>
 						</fieldset>
-					</form
+					</form>
 					<!-- ここから下を編集する必要はありません -->
 				</div>
 			</div>
