--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -76,9 +76,7 @@
 							<table class="table table-striped">
 								<tr>
 									<th nowrap>従業員名</th>
-									<td><label th:errors="*{name}" class="error-messages">
-											名前を入力してください </label> <label class="control-label" style="color: red"
-										for="name"></label> <input type="text" name="name" id="name"
+									<td><input type="text" name="name" id="name"
 										class="form-control" value="山田花子" th:value="${employee.name}">
 									</td>
 								</tr>
@@ -89,86 +87,58 @@
 								</tr>
 								<tr>
 									<th nowrap>性別</th>
-									<td><label th:errors="*{gender}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="gender"></label> <span
-										th:if="${employee.gender} == '女性'"> <input type="radio"
-											name="gender" id="male" value="男性"> <label for="male">男性</label>
-											<input type="radio" name="gender" id="female" value="女性"
-											checked> <label for="female">女性</label>
+									<td><<span th:if="${employee.gender} == '女性'"> <input
+											type="radio" name="gender" id="male" value="男性"> <label
+											for="male">男性</label> <input type="radio" name="gender"
+											id="female" value="女性" checked> <label for="female">女性</label>
 									</span> <span th:if="${employee.gender} == '男性'"> <input
 											type="radio" name="gender" id="male" value="男性" checked>
-											<label for="male">男性</label> <input type="radio"
-											name="gender" id="female" value="女性"> <label
-											for="female">女性</label>
+											<input type="radio" name="gender" id="female" value="女性">
 									</span></td>
 								</tr>
 								<tr>
 									<th nowrap>入社日</th>
-									<td><label th:errors="*{hireDate}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="hireDate"></label> <input type="date"
-										name="hireDate" id="hireDate" class="form-control"
-										th:value="${employee.hireDate}"></td>
+									<td><input type="date" name="hireDate" id="hireDate"
+										class="form-control" th:value="${employee.hireDate}"></td>
 								</tr>
 								<tr>
 									<th nowrap>メールアドレス</th>
-									<td><label th:errors="*{mailAddress}"
-										class="error-messages"> 扶養人数を入力してください </label> <label
-										class="control-label" style="color: red" for="mailAddress"></label>
-										<input type="email" name="mailAddress" id="mailAddress"
-										class="form-control" th:value="${employee.mailAddress}">
-									</td>
+									<td><input type="email" name="mailAddress"
+										id="mailAddress" class="form-control"
+										th:value="${employee.mailAddress}"></td>
 								</tr>
 								<tr>
 									<th nowrap>郵便番号</th>
-									<td><label th:errors="*{zipCode}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="zipCode"></label> <input type="text"
-										name="zipCode" id="zipCode" class="form-control"
-										th:value="${employee.zipCode}"></td>
+									<td><input type="text" name="zipCode" id="zipCode"
+										class="form-control" th:value="${employee.zipCode}"></td>
 								</tr>
 								<tr>
 									<th nowrap>住所</th>
-									<td><label th:errors="*{address}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="address"></label> <input type="text"
-										name="address" id="address" class="form-control"
-										th:value="${employee.address}"></td>
+									<td><input type="text" name="address" id="address"
+										class="form-control" th:value="${employee.address}"></td>
 								</tr>
 								<tr>
 									<th nowrap>電話番号</th>
-									<td><label th:errors="*{telephone}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="telephone"></label> <input type="text"
-										name="telephone" id="telephone" class="form-control"
-										th:value="${employee.telephone}"></td>
+									<td><input type="text" name="telephone" id="telephone"
+										class="form-control" th:value="${employee.telephone}"></td>
 								</tr>
 								<tr>
 									<th nowrap>給料</th>
-									<td><label th:errors="*{salary}" class="error-messages">
-											扶養人数を入力してください </label> <label class="control-label"
-										style="color: red" for="salary"></label> <input type="text"
-										name="salary" id="salary" class="form-control"
-										th:value="${employee.salary}"></td>
+									<td><input type="text" name="salary" id="salary"
+										class="form-control" th:value="${employee.salary}"></td>
 								</tr>
 								<tr>
 									<th nowrap>特性</th>
-									<td><label th:errors="*{characteristics}"
-										class="error-messages"> 扶養人数を入力してください </label> <label
-										class="control-label" style="color: red" for="characteristics"></label>
-										<textarea name="characteristics" id="characteristics"
+									<td><textarea name="characteristics" id="characteristics"
 											class="form-control" th:text="${employee.characteristics}"
 											rows="4" cols="30">
                     </textarea></td>
 								</tr>
 								<tr>
 									<th nowrap>扶養人数</th>
-									<td><label th:errors="*{dependentsCount}"
-										class="error-messages"> 扶養人数を入力してください </label> <label
-										class="control-label" style="color: red" for="dependentsCount"></label>
-										<input type="hidden" name="id" th:value="${employee.id}">
-										<input type="text" name="dependentsCount" id="dependentsCount"
+									<td><input type="hidden" name="id"
+										th:value="${employee.id}"> <input type="text"
+										name="dependentsCount" id="dependentsCount"
 										class="form-control" value="3"
 										th:value="${employee.dependentsCount}"></td>
 								</tr>
